# cantab_screensaver

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  scrvid.c
debian/: cantab-screensaver.postinst  cantab-screensaver.prerm  changelog  control  copyright  rules
